--- a/src/main/webapp/product-list.xhtml
+++ b/src/main/webapp/product-list.xhtml
@@ -7,6 +7,7 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html">
     <h:head>
         <title>Insert title here</title>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     </h:head>
     <h:body>
         <ui:composition template="/templates/base.xhtml">
